# Structural-Design-Patterns

./: .gitignore  CMakeLists.txt  README.md
patterns/01_Adapter/: main_01_adapter.cpp
patterns/01_Adapter/adapter_basic/: CMakeLists.txt  adapter_basic.cpp  adapter_basic.ixx  main_adapter_basic.ixx
patterns/01_Adapter/adapter_flight_simulator/: AccelAdapter.ixx  Accelerometer.ixx  CMakeLists.txt  Game.ixx  Input.ixx  Keyboard.ixx  main_adapter_flight_simulator.ixx
patterns/02_Facade/: main_02_facade.cpp
patterns/02_Facade/facade_basic_example/: A.ixx  B.ixx  C.ixx  CMakeLists.txt  Client.ixx  Facade.ixx  main_basic_example.ixx
patterns/02_Facade/facade_console_project/: CMakeLists.txt  Console.ixx  ConsoleLinux.cpp  ConsoleLinux.ixx  ConsoleWindows.cpp  ConsoleWindows.ixx  main_console_project.ixx
patterns/03_Proxy/: main_03_proxy.cpp
patterns/03_Proxy/proxy_basic_example/: CMakeLists.txt  Proxy.ixx  RealSubject.ixx  Subject.ixx  main_basic_example.ixx
patterns/03_Proxy/proxy_protection_proxy/: CMakeLists.txt  Employee.ixx  Repository.ixx  Storage.ixx  main_protection_proxy.ixx
patterns/03_Proxy/proxy_remote_proxy/: CMakeLists.txt  IAnimate.ixx  Sprite.ixx  main_remote_proxy.ixx
patterns/03_Proxy/proxy_smart_proxy/: Bitmap.ixx  CMakeLists.txt  Image.ixx  Pointer.ixx  Smiley.txt  main_smart_proxy.ixx
patterns/03_Proxy/proxy_virtual_proxy/: Bitmap.ixx  BitmapProxy.ixx  CMakeLists.txt  Image.ixx  RepoProxy.ixx  main_virtual_proxy.ixx
patterns/04_Decorator/: main_04_decorator.cpp
patterns/04_Decorator/decorator_01_basic_example/: CMakeLists.txt  Component.ixx  ConcreteComponent.ixx  ConcreteDecoratorA.ixx  ConcreteDecoratorB.ixx  Decorator.ixx  main_basic_example.ixx
patterns/04_Decorator/decorator_02_stream_library/: BufferedInputStream.ixx  BufferedOutputStream.ixx  CMakeLists.txt  DecryptedInputStream.ixx  EncryptedOutputStream.ixx  FileInputStream.ixx  FileOutputStream.ixx  InputStream.ixx  OutputStream.ixx  OutputStreamDecorator.ixx  main_stream_library.ixx
patterns/04_Decorator/decorator_03_static/: BufferedInputStreamStatic.ixx  BufferedOutputStreamStatic.ixx  CMakeLists.txt  DecryptedInputStreamStatic.ixx  EncryptedOutputStreamStatic.ixx  FileInputStreamStatic.ixx  FileOutputStreamStatic.ixx  InputStreamStatic.ixx  OutputStreamDecoratorStatic.ixx  OutputStreamStatic.ixx  TemplateConcepts.ixx  main_static.ixx
patterns/04_Decorator/decorator_04_functional/: CMakeLists.txt  main_functional.ixx
patterns/05_Composite/: main_05_composite.cpp
patterns/05_Composite/composite_01_basic_example/: CMakeLists.txt  Component.ixx  Composite.ixx  Leaf.ixx  main_basic_example.ixx
patterns/05_Composite/composite_02_ui_composite/: Button.ixx  CMakeLists.txt  Frame.ixx  Widget.ixx  main_ui_composite.ixx
patterns/06_Bridge/: CMakeLists.txt  Point.ixx  Window.cpp  Window.h  main_06_bridge.cpp
patterns/06_Bridge/bridge_01_basic_example/: Abstraction.ixx  CMakeLists.txt  ConcreteImplementorA.ixx  ConcreteImplementorB.ixx  Implementor.ixx  RefinedAbstraction.ixx  main_basic_example.ixx
patterns/06_Bridge/bridge_02_shapes/: CMakeLists.txt  Circle.ixx  Line.ixx  Point.ixx  Shape.ixx  Window.cpp  Window.h  all_simple2d.ixx  main_shapes.ixx  main_shapes_linux.ixx
patterns/06_Bridge/bridge_03_shapes_bridge/: CMakeLists.txt  Circle.ixx  GDI.cpp  GDI.h  Line.ixx  OpenGL.ixx  Renderer.ixx  Shape.ixx  main_shapes_bridge.ixx  main_shapes_bridge_linux.ixx
patterns/06_Bridge/bridge_04_shared_implementation/: CMakeLists.txt  SharedString.cpp  SharedString.ixx  String.ixx  main_shared_implementation.ixx
patterns/06_Bridge/bridge_05_PIMPL/: CMakeLists.txt  Employee.cpp  Employee.cppm  Employee.ixx  accounts.cppm  main_PIMPL.cppm  main_PIMPL.ixx  tax.cppm
patterns/07_Flyweight/: main_07_flyweight.cpp
patterns/07_Flyweight/flyweight_01_basic_example/: CMakeLists.txt  ConcreteFlyweight.cpp  ConcreteFlyweight.cppm  Flyweight.cppm  FlyweightFactory.cpp  FlyweightFactory.cppm  UnsharedConcreteFlyweight.cpp  UnsharedConcreteFlyweight.cppm  main_basic_example.cppm
patterns/07_Flyweight/flyweight_02_game_assets/: CMakeLists.txt  Model.cpp  Model.cppm  Vegetation.cpp  Vegetation.cppm  main_game_assets.cppm
patterns/07_Flyweight/flyweight_03_flyweight_assets/: CMakeLists.txt  Car.cpp  Car.cppm  Model.cpp  Model.cppm  Vegetation.cpp  Vegetation.cppm  VegetationFactory.cpp  VegetationFactory.cppm  main_flyweight_assets.cppm
patterns/07_Flyweight/flyweight_04_string_interning/: CMakeLists.txt  String.cpp  String.cppm  main_string_interning.cppm
